typescript/checker/tests/conformance/expressions/asOperator/asOperatorAmbiguity.ts.stderr
error: NoSuchProperty {
    span: Span {
        lo: BytePos(
            198,
        ),
        hi: BytePos(
            199,
        ),
        ctxt: #0,
    },
    prop: Some(
        Ident(
            Ident {
                span: Span {
                    lo: BytePos(
                        198,
                    ),
                    hi: BytePos(
                        199,
                    ),
                    ctxt: #0,
                },
                sym: Atom('m' type=inline),
                type_ann: None,
                optional: false,
            },
        ),
    ),
}
 --> $DIR/tests/conformance/expressions/asOperator/asOperatorAmbiguity.ts:7:14
  |
7 | var z = y[0].m; // z should be string
  |              ^

